--- a/ui/index.html
+++ b/ui/index.html
@@ -8,6 +8,9 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
+        <script>
+            alert("Hello");
+        </script>
         <div class="center text-big bold">
             Hi! I am your webapp.
         </div>
