--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <script>
-            alert("Hello");
+            alert("Hello I \'m an");
         </script>
         <div class="center text-big bold">
             Hi! I am your webapp.
