[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
         <script>
             alert("Hello I \'m an");
         </script>
-        <div class="center text-big bold">
+        <div class="center text-big bold" id="main-id">
             Hi! I am your webapp.
         </div>
         <script type="text/javascript" src="/ui/main.js">
