--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
         <script>
             alert("Hello I \'m an");
         </script>
-        <div class="center text-big bold" id="main-id">
+        <div id="main-id" class="center text-big bold" >
             Hi! I am your webapp.
         </div>
         <script type="text/javascript" src="/ui/main.js">
