[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img id="madi" src="/ui/madi.png" class="img-medium"/>
+            <img id="madi" src="https://scontent.fccu5-1.fna.fbcdn.net/v/t1.0-9/15542255_1307209742687447_8672422526112490689_n.jpg?oh=f7c9fca741d944628ed8cca143316cd1&oe=5A29EF5D" class="img-medium"/>
         </div>
         <br>
         <script>
