--- a/ui/index.html
+++ b/ui/index.html
@@ -4,15 +4,23 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class="container">
         <div class="center">
             <img id="madi" src="https://scontent.fccu5-1.fna.fbcdn.net/v/t1.0-9/15542255_1307209742687447_8672422526112490689_n.jpg?oh=f7c9fca741d944628ed8cca143316cd1&oe=5A29EF5D" class="img-medium"/>
         </div>
+        <hr/>
         <br>
-        <script>
-            alert("Hello I \'m an");
-        </script>
-        <div id="main-id" class="center text-big bold" >
-            Hi! I am your webapp.
+        <h3>Personal</h3>
+        <div>
+            My name is Hillol Majumdar
+        </div>
+        <hr/>
+        <br>
+        <h3>Professional</h3>
+        <div>
+            I work at netwest solutions
+        </div>
+        <div class="footer"></div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
