[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -21,6 +21,7 @@
             I work at netwest solutions
         </div>
         <div class="footer"></div>
+        The button<button id="buttm">click me!!</button>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
