[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -21,7 +21,7 @@
             I work at netwest solutions
         </div>
         <div class="footer"></div>
-        The button<button id="buttm">click me!!</button>
+        The button<button id="counter">click me!!</button> clicked<span id="count">0</span>times
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
