--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -2,8 +2,21 @@
   <head>
 	<title>Article One</title>
 	<meta name="viewport" content="width-device-width, initial-scale-1" />
+    <style>
+      .container{
+          max-width: 800px;
+          margin: 0auto;
+          color:#4a4a4a;
+          font-family: sans-serif;
+          padding-top: 60px;
+          padding-left:20px;
+          padding-right:20px;
+      }
+      
+  </style>
   </head>
   <body>
+      <div class='container'>
     <div >
       <a href="/">Home</a>
     </div>
@@ -19,6 +32,7 @@
       </p>
       <p>This is m,y 1st content.This is m,y 1st content.This is m,y 1st content.This is m,y 1st content.This is m,y 1st content.
       </p>
+   </div>
    </div>
   </body>
 </html>
