--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,9 +1,24 @@
 <html>
   <head>
 	<title>Article Two</title>
-	<meta name="viewport"width-device-width, initial-scale-1" />
+	<meta name="viewport" content="width-device-width, initial-scale-1" />
+	
+	<style>
+      .container{
+          max-width: 800px;
+          margin: 0auto;
+          color:#4a4a4a;
+          font-family: sans-serif;
+          padding-top: 60px;
+          padding-left:20px;
+          padding-right:20p;
+      }
+      
+  </style>
+	
   </head>
   <body>
+      <div class='container'>
     <div>
       <a href="/">Home</a>
     </div>
@@ -19,6 +34,7 @@
       </p>
       <p>This is m,y 1st content.This is m,y 1st content.This is m,y 1st content.This is m,y 1st content.This is m,y 1st content.
       </p>
+   </div>
    </div>
   </body>
 </html>
