[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,14 +1,27 @@
 <html>
   <head>
-	<title>Article Three</title>
-	<meta name="viewport"width-device-width, initial-scale-1" />
+	<title>Article One</title>
+	<meta name="viewport" content="width-device-width, initial-scale-1" />
+	<style>
+      .container{
+          max-width: 800px;
+          margin: 0auto;
+          color:#4a4a4a;
+          font-family: sans-serif;
+          padding-top: 60px;
+          padding-left:20px;
+          padding-right:20p;
+      }
+      
+  </style>
   </head>
   <body>
-    <div>
+      <div class='container'>
+    <div >
       <a href="/">Home</a>
     </div>
     <hr/>
-    <h3>Article Three</h3>
+    <h3>Article One</h3>
     <div>
       5 Sep, 2016
     </div>
@@ -19,6 +32,7 @@
       </p>
       <p>This is m,y 1st content.This is m,y 1st content.This is m,y 1st content.This is m,y 1st content.This is m,y 1st content.
       </p>
+   </div>
    </div>
   </body>
 </html>
