--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -2,17 +2,9 @@
   <head>
 	<title>Article Two</title>
 	<meta name="viewport" content="width-device-width, initial-scale-1" />
-	
+	<link href="/ui/style.css" rel="stylesheet" />
 	<style>
-      .container{
-          max-width: 800px;
-          margin: 0 auto;
-          color:#4a4a4a;
-          font-family: sans-serif;
-          padding-top: 60px;
-          padding-left:20px;
-          padding-right:20p;
-      }
+      
       
   </style>
 	
