[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -22,6 +22,16 @@
         </div>
         <div class="footer"></div>
         The button<button id="counter">click me!!</button> clicked<span id="count">0</span>times
+        <br/>
+        <input type="text" id="name" placeholder="ame"></input>
+        <input type="submit" valure="submit"></input>
+        <ul>
+            <li>Name1</li>
+            <li>Name2</li>
+            <li>Name3</li>
+            
+        </ul>
+        
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
