[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -24,7 +24,7 @@
         The button<button id="counter">click me!!</button> clicked<span id="count">0</span>times
         <br/>
         <input type="text" id="name" placeholder="ame"></input>
-        <input type="submit" valure="submit"></input>
+        <input type="submit" valure="submit" id="submiy_btn"></input>
         <ul>
             <li>Name1</li>
             <li>Name2</li>
