--- a/ui/index.html
+++ b/ui/index.html
@@ -25,11 +25,8 @@
         <br/>
         <input type="text" id="name" placeholder="ame"></input>
         <input type="submit" valure="submit" id="submiy_btn"></input>
-        <ul>
-            <li>Name1</li>
-            <li>Name2</li>
-            <li>Name3</li>
-            
+        <ul id="namelist">
+
         </ul>
         
         </div>
