--- a/ui/index.html
+++ b/ui/index.html
@@ -24,10 +24,8 @@
         The button<button id="counter">click me!!</button> clicked<span id="count">0</span>times
         <br/>
         <input type="text" id="name" placeholder="ame"></input>
-        <input type="submit" valure="submit" id="submiy_btn"></input>
-        <ul id="namelist">
-
-        </ul>
+        <input type="submit" valure="submit" id="submit_btn"></input>
+        <ul id="namelist"></ul>
         
         </div>
         <script type="text/javascript" src="/ui/main.js">
