[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -25,7 +25,9 @@
         <br/>
         <input type="text" id="name" placeholder="ame"></input>
         <input type="submit" valure="submit" id="submit_btn"></input>
-        <ul id="namelist"></ul>
+        <ul id="namelist">
+            
+        </ul>
         
         </div>
         <script type="text/javascript" src="/ui/main.js">
